cluster/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: satisfactory
  namespace: games
spec:
  selector:
    matchLabels:
      app: satisfactory
  serviceName: "satisfactory"
  replicas: 1
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
        - name: satisfactory
          image: wolveix/satisfactory-server:latest
          ports:
            - containerPort: 7777
              name: "game-tcp"
              protocol: TCP
            - containerPort: 7777
              name: "game-udp"
              protocol: UDP
          volumeMounts:
            - name: satisfactory-data
              mountPath: /config
        - name: prometheus
          image: ghcr.io/dfoulkes/satisfactory-prometheus-exporter:feature-build-container
          ports:
            - containerPort: 8075
              name: "prometheus"
              protocol: TCP
  volumeClaimTemplates:
    - metadata:
        name: satisfactory-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 30Gi
        storageClassName: longhorn
