cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: satisfactory
  namespace: games
  labels:
    app: satisfactory
spec:
  type: LoadBalancer
  ports:
    - port: 7777
      protocol: UDP
      name: "game"
      targetPort: 7777
    - port: 7777
      protocol: TCP
      name: "gametcp"
      targetPort: 7777
    - port: 8075
      protocol: TCP
      name: "prometheus"
      targetPort: 8075
  selector:
    app: satisfactory
