cluster/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-traffic-block-horizontal
  namespace: games
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 7777
    - protocol: UDP
      port: 7777
    - protocol: TCP # allow prometheus to scrape
      port: 8075
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 7777
  - to:
    - ipBlock:
        cidr: 10.42.0.0/16
    ports: [] # do no
